fix(app): prevent scrollbar glitch on board layout routes, also hiding unnecessary scrollbar in home

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -2,6 +2,11 @@
   z-index: 1;
 }
 
+.boardLayout {
+  overflow-y: hidden;
+  min-height: 100vh;
+}
+
 @media (min-width: 640px) {
   .app {
     padding: 5px;
